# switchboard-sdk

./: copy.bara.sky
.github/: dependabot.yml
aptos/: README.md
aptos/examples/example_basic_read/: Move.toml
aptos/examples/example_basic_read/sources/: example_basic_read.move
aptos/on_demand/: package.json  tsconfig.json
aptos/on_demand/scripts/ts/: mainnet_aggregator_flow.ts  porto_aggregator_flow.ts  testnet_aggregator_flow.ts
aptos/on_demand/sources/actions/aggregator/: aggregator_submit_result_action.move
aptos/on_demand/sources/actions/update/: update_action.move
aptos/on_demand/sources/errors/: errors.move
aptos/on_demand/sources/utils/: hash.move  serialization.move
aptos/on_demand_adapter/: Move.toml
aptos/on_demand_adapter/sources/actions/: aggregator_open_round_action.move
aptos/on_demand_adapter/sources/errors/: errors.move
aptos/on_demand_adapter/sources/schemas/: aggregator.move
aptos/on_demand_adapter/sources/utils/: math.move  serialization.move  vec_utils.move
javascript/common/: .gitignore  README.md  compile-protos.js  netlify.toml  package.json  tsconfig.cjs.json  tsconfig.json  typedoc.json
javascript/common/src/: crossbar-client.ts  evm-utils.ts  feed-hash.ts  gateway.ts  index.ts  protos.ts  secrets.ts  switchboard-decimal.ts
javascript/common/src/evm/: abi.ts
javascript/common/src/types/: chains.ts  crossbar.ts  gateway.ts
javascript/common/src/utils/: axios.ts  instructions.ts  json.ts  oracle-feed.ts  oracle-job.ts  string.ts
javascript/common/test/: CrossbarClient.test.ts  instructions.test.ts  oracleFeed.test.ts
sail/sail-sdk/: Cargo.toml
sail/sail-sdk/src/amd_sev_snp_attestation/: attest.rs  verify.rs
sail/sail-sdk/src/keys/: mod.rs
solana/javascript/on-demand/: .eslintrc.json  README.md  package.json  pnpm-lock.yaml  typedoc.json
solana/javascript/on-demand/src/: constants.ts  index.ts
solana/javascript/on-demand/src/accounts/: lutMap.ts  oracle.ts  permission.ts  pullFeed.ts  queue.ts  randomness.ts  state.ts
solana/javascript/on-demand/src/anchor-utils/: AnchorUtils.ts  anchor-utils.ts  index.ts
solana/javascript/on-demand/src/classes/: account.ts  index.ts  oracleQuote.ts  source.ts  subscription.ts  surge.ts  timeInterval.ts
solana/javascript/on-demand/src/evm/: index.ts
solana/javascript/on-demand/src/instruction-utils/: Secp256k1InstructionUtils.ts  ed25519-instruction-utils.ts  index.ts  instruction-utils.ts  secp256k1-instruction-utils.ts
solana/javascript/on-demand/src/oracle-interfaces/: gateway.ts
solana/javascript/on-demand/src/shims/: nodewallet.ts
solana/javascript/on-demand/src/sysvars/: associatedToken.ts  recentSlothashes.ts
solana/javascript/on-demand/src/utils/: index.ts  lookupTable.ts  signatureAuth.ts  solanaCluster.ts
solana/javascript/on-demand/test/: networkResolution.test.ts  oracleQuote.authority.smoke.ts  oracleQuote.authority.test.ts  pullFeed.discriminators.smoke.ts  randomness.closeLutIx.smoke.ts
solana/rust/switchboard-on-demand/: Cargo.toml  README.md
solana/rust/switchboard-on-demand-client/: Cargo.toml  README.md
solana/rust/switchboard-on-demand-client/scripts/: verify-crate-release.sh
solana/rust/switchboard-on-demand-client/src/: crossbar.rs  gateway.rs  lib.rs  lut_owner.rs  pull_feed.rs  secp256k1.rs
solana/rust/switchboard-on-demand-client/src/accounts/: oracle.rs  queue.rs  state.rs
solana/rust/switchboard-on-demand-client/src/instructions/: mod.rs  pull_feed_submit_response_consensus.rs
solana/rust/switchboard-on-demand/src/: associated_token_account.rs  lib.rs  macros.rs  prelude.rs  program_id.rs  smallvec.rs  solana_compat.rs  utils.rs  v2_client_compat.rs
solana/rust/switchboard-on-demand/src/client/: crossbar.rs  gateway.rs  lut_owner.rs  mod.rs  pull_feed.rs  recent_slothashes.rs  secp256k1.rs  signature_auth.rs  subscription.rs  surge.rs  transaction_builder.rs  utils.rs
solana/rust/switchboard-on-demand/src/client/accounts/: queue_ext.rs
solana/rust/switchboard-on-demand/src/client/instructions/: pull_feed_submit_response_consensus.rs  pull_feed_submit_response_many_ix.rs
solana/rust/switchboard-on-demand/src/on_demand/: error.rs  mod.rs  types.rs
solana/rust/switchboard-on-demand/src/on_demand/accounts/: oracle.rs  oracle_stats.rs  pull_feed.rs  queue.rs  randomness.rs  state.rs
solana/rust/switchboard-on-demand/src/on_demand/instructions/: guardian_quote_verify.rs  oracle_heartbeat.rs  oracle_heartbeat_v2.rs  oracle_reset_lut.rs  oracle_set_configs.rs  oracle_sync_lut.rs  permission_set.rs  queue_garbage_collect.rs  queue_pay_rewards.rs  queue_pay_subsidy.rs  queue_reset_lut.rs  randomness_commit.rs
solana/rust/switchboard-on-demand/src/on_demand/oracle_quote/: authority_quote.rs  instruction_parser.rs  mod.rs  quote_account.rs  quote_ext.rs  test_utils.rs
solana/rust/switchboard-on-demand/src/sysvar/: address_lookup_table.rs  clock.rs
surge/switchboard-surge-core/: Cargo.toml
surge/switchboard-surge-core/src/: auth.rs  batch_receiver.rs  bip_correction.rs  clock_sync.rs  exchange_config.rs  feed_metadata.rs  hub.rs  keyed_channel.rs  lib.rs  message_rate.rs  pair.rs  rate_limiter.rs  rest_manager.rs  runtime_separation.rs  schema.rs  traits.rs  types.rs  volume_cache.rs  weighted_source.rs
surge/switchboard-surge-core/src/candle/: buffer.rs  db.rs  mod.rs  types.rs
surge/switchboard-surge-core/src/exchanges/: binance.rs  binance_connection.rs  bitget.rs  bybit.rs  coinbase.rs  connection_state.rs  gate.rs  mod.rs  okx.rs  pyth.rs  titan.rs
surge/switchboard-surge-oracle/: Cargo.toml
surge/switchboard-surge-oracle/src/: lib.rs
surge/switchboard-surge-oracle/src/auth/: mod.rs  oracle_auth.rs
surge/switchboard-surge-oracle/src/consensus/: mod.rs  signing.rs
surge/switchboard-surge-oracle/src/messages/: mod.rs  oracle.rs
surge/switchboard-surge-oracle/src/stream/: bundle_monitor.rs  bundle_state.rs  handler.rs  mod.rs  monitor_optimized.rs  priority.rs  state.rs  stats.rs
