[package]
name = "switchboard-surge-core"
version = "0.1.0"
edition = "2021"
authors = ["Switchboard Labs"]
description = "Core components for Switchboard Surge price feeds"
license = "MIT"

[features]
default = []
candle-db = ["sqlx"]

[dependencies]
# Async runtime
tokio = { version = "1", features = ["full", "tracing"] }
fastwebsockets = { version = "0.10", features = ["upgrade"] }
tokio-tungstenite = { version = "0.28", features = ["native-tls"] }
hyper = { version = "1.1", features = ["client", "http1"] }
hyper-util = { version = "0.1", features = [
    "client",
    "client-legacy",
    "tokio",
    "http1",
] }
http-body-util = "0.1"
futures = "0.3"
futures-util = "0.3.28"


# Data structures
dashmap = "6.0"
once_cell = "1"
lazy_static = "1"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_bytes = "0.11"
rust_decimal = { version = "1", features = ["serde"] }
rmp-serde = "1"

# HTTP client for REST APIs
reqwest = { version = "0.11", features = ["json", "stream"] }

# Error handling
anyhow = "1"
thiserror = "1"

# Logging
tracing = "0.1"

# Time
chrono = { version = "0.4", features = ["serde"] }

# Utilities
sha2 = "0.10"
base64 = "0.22"
bs58 = "0.5"

# TLS and HTTP for WebSocket connections
hyper-tls = "0.6"
native-tls = "0.2"
http = "1.1"

# Oracle feed metadata dependencies
sb-on-demand-schemas = { path = "../sb-on-demand-schemas" }
protos = { package = "switchboard-protos", path = "../../protos" }
prost = "0.13"
faster-hex = "0.9"
rand = "0.8"

# UUID for session IDs
uuid = { version = "1", features = ["v4"] }

# Database (optional, for candle persistence)
sqlx = { version = "0.8", features = ["runtime-tokio", "postgres", "chrono", "rust_decimal"], optional = true }

[dev-dependencies]
rust_decimal_macros = "1"
