[package]
name = "switchboard-surge-oracle"
version = "0.1.0"
edition = "2021"
authors = ["Switchboard Labs"]
description = "Oracle mode WebSocket streaming with signing for Switchboard Surge"
license = "MIT"

[dependencies]
# Core surge functionality
switchboard-surge-core = { path = "../switchboard-surge-core" }
switchboard-subscription-auth = { path = "../switchboard-subscription-auth" }

# Async runtime
tokio = { version = "1", features = ["full"] }
fastwebsockets = { version = "0.10", features = ["upgrade"] }
hyper = { version = "1.1", features = ["server", "http1"] }
hyper-util = { version = "0.1", features = ["tokio", "server-auto"] }
http = "1.1"
http-body-util = "0.1"
futures = "0.3"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Data structures
dashmap = "6.0"
rust_decimal = "1"
parking_lot = "0.12"

# Error handling
anyhow = "1"
thiserror = "1"

# Logging
tracing = "0.1"

# Auth utilities
sha2 = "0.10"
sha3 = "0.10"
base64 = "0.22"
faster-hex = "0.9"

# Time
chrono = { version = "0.4", features = ["serde"] }

# Utilities
uuid = { version = "1", features = ["v4", "serde"] }
once_cell = "1"
serde_urlencoded = "0.7"
tokio-util = "0.7"
rand = "0.8"
lazy_static = "1"

# Oracle-specific dependencies
libsecp256k1 = "0.7"
sb-on-demand-schemas = { path = "../sb-on-demand-schemas" }
solana-program = "=2.2.1"
solana-sdk = "=2.2.1"
protos = { package = "switchboard-protos", path = "../../protos" }
prost = "0.13"
base58 = "0.2"
base64-serde = "0.7"
hex = "0.4"
