[package]
name = "switchboard-on-demand-client"
description = "Switchboard On Demand Client: Interact with the Switchboard On Demand and Crossbar API"
version = "0.4.0-alpha-0.0.1"
edition = "2021"
license = "MIT"
resolver = "2"

[dependencies]
anyhow_ext = "0.2.1"
arrayref = "0.3.7"
base58 = "0.2.0"
base64 = "0.22.1"
bincode = "1.3.3"
borsh = "0.9.3"
bs58 = { version = "0.4", features = ["alloc"] }
bytemuck = "1.16.1"
futures = "0.3.30"
hex = "0.4.3"
lazy_static = "1.5.0"
pbjson = "0.7.0"
prost = "0.13.1"
reqwest = { version = "0.11", features = ["json", "rustls-tls"], default-features = false }
rust_decimal = "1.35.0"
serde = { version = "1.0", features = ["derive"] }
serde_derive = "1.0.209"
serde_json = "1.0"
sha2 = "0.10.8"
dashmap = "6.0.1"
solana-client = "=1.18.26"
solana-sdk = "=1.18.26"
tokio = { version = "^1.39", features = ["full"] }
tokio-stream = ">=0.1.17"
switchboard-utils = "0.9.2"
libsecp256k1 = "0.6.0"
sha3 = "0.10.8"
zeroize = "1.6.0"

[features]
devnet = []

[patch.crates-io]
curve25519-dalek = { git = "https://github.com/anza-xyz/curve25519-dalek.git", rev = "c14774464c4d38de553c6ef2f48a10982c1b4801" }

