[package]
name = "switchboard-on-demand"
version = "0.3.8"
# docs.rs autobuild has difficulty with ahash dep. Host yuorself at https://tiiny.host/
documentation = "https://docs.rs/switchboard-on-demand/latest/switchboard_on_demand"
edition = "2021"
resolver = "2"
description = "A Rust library to interact with the Switchboard Solana program."
readme = "README.md"
keywords = ["switchboard", "oracle", "solana"]
homepage = "https://switchboard.xyz"
repository = "https://github.com/switchboard-xyz/solana-sdk/tree/main/rust/switchboard-solana"
license = "MIT"

[lib]
crate-type = ["cdylib", "lib"]
name = "switchboard_on_demand"
doctest = false

[features]
default = []
pid_override = []
devnet = []
doc_cfg = []
anchor = ["anchor-lang"]

[dependencies]
anchor-lang = { version = ">=0.28", optional = true }
base64 = "0.21.7"
bincode = { version = "^1" }
borsh = { version = "0.10.4" }
bytemuck = "^1"
libsecp256k1 = { version = "0.7.2", default-features = false }
rust_decimal = "^1"
serde = { version = "^1", features = ["derive"] }
sha2 = "0.10.9"
solana-program = ">=1.18"
spl-associated-token-account = { version = ">=2", features = ["no-entrypoint"] }
spl-token = { version = ">=3", features = ["no-entrypoint"] }
