[package]
name = "switchboard-on-demand"
version = "0.3.4"
# docs.rs autobuild has difficulty with ahash dep. Host yuorself at https://tiiny.host/
documentation = "https://docs.rs/switchboard-on-demand/latest/switchboard_on_demand"
edition = "2021"
resolver = "2"
description = "A Rust library to interact with the Switchboard Solana program."
readme = "README.md"
keywords = ["switchboard", "oracle", "solana"]
homepage = "https://switchboard.xyz"
repository = "https://github.com/switchboard-xyz/solana-sdk/tree/main/rust/switchboard-solana"
license = "MIT"

[lib]
crate-type = ["cdylib", "lib"]
name = "switchboard_on_demand"
doctest = false

[features]
default = ["cpi"]
no-entrypoint = []
cpi = ["no-entrypoint"]
ipfs = []
all-features = ["ipfs", "cpi", "no-entrypoint", "client"]
pid_override = []
client = ["solana-client", "solana-sdk", "anchor-lang", "anchor-client", "tokio", "tokio-util", "futures"]
devnet = []
doc_cfg = []
anchor = ["anchor-lang"]
secrets = []

[dependencies]
switchboard-common = { path = "../switchboard-common", features = [] }
bincode = { version = "^1" }
borsh = { version = "0.10.3" }
bytemuck = "^1"
libsecp256k1 = "0.7.1"
rust_decimal = "^1"
serde = { version = "^1", features = ["derive"] }
sha2 = "0.10.8"
solana-program = ">=1.17"
spl-token = { version = ">=3", features = ["no-entrypoint"] }
spl-associated-token-account = { version = ">=2", features = ["no-entrypoint"] }
anyhow = "1.0.97"
futures = { version = "0.3.31", optional = true }
anchor-lang = { version = "=0.29", optional = true }
anchor-client = { version = "=0.29", optional = true }
solana-client = { version = ">=1.17.16", optional = true }
solana-sdk = { version = ">=1.17.16", optional = true }
tokio = { version = "^1.41", features = ["full", "tracing"], optional = true }
tokio-util = { version = "0.7.10", features = ["time"], optional = true }

