[package]
name = "switchboard-on-demand"
version = "0.11.3"
# docs.rs autobuild has difficulty with ahash dep. Host yuorself at https://tiiny.host/
documentation = "https://docs.rs/switchboard-on-demand/latest/switchboard_on_demand"
edition = "2021"
resolver = "2"
description = "A Rust library to interact with the Switchboard Solana program."
readme = "README.md"
keywords = ["switchboard", "oracle", "solana"]
homepage = "https://switchboard.xyz"
repository = "https://github.com/switchboard-xyz/solana-sdk/tree/main"
license = "MIT"

[lib]
crate-type = ["cdylib", "lib"]
name = "switchboard_on_demand"
doctest = false

[features]
## Default features - enables CPI support with Solana SDK v2
default = ["cpi", "solana-v2"]

## Disables the program entrypoint. Use when building programs that import this crate.
no-entrypoint = []

## Enables Cross-Program Invocation (CPI) support. Implies `no-entrypoint`.
## Use this when you need to call Switchboard from another Solana program.
cpi = ["no-entrypoint"]

## Meta-feature for documentation builds - includes all commonly used features.
all-features = ["cpi", "no-entrypoint", "client"]

## Allows overriding the Switchboard program ID at runtime.
## Only enable for testing purposes.
pid_override = []

## Client functionality for off-chain interactions (Gateway, Crossbar, transaction builders).
## Uses Solana SDK v2 with anchor-client compatibility.
## Includes: RPC client, transaction building, oracle feeds, and Crossbar integration.
client = ["anchor-lang", "tokio", "futures", "reqwest", "prost", "dashmap", "tokio-stream", "bs58", "hex", "base64", "serde_json", "switchboard-utils", "solana-v2", "dep:solana-account-decoder-v2", "dep:solana-client-v2", "dep:solana-sdk-v2", "dep:chrono", "dep:futures-util", "dep:spl-associated-token-account", "dep:tokio-tungstenite", "dep:url"]

## Alias for `client` feature - explicitly uses Solana SDK v2.
client-v2 = ["client"]

## Client feature using Solana v3 crates.
## Uses v2 compat modules for types that haven't been published for v3 yet.
client-v3 = ["tokio", "futures", "reqwest", "prost", "dashmap", "tokio-stream", "bs58", "hex", "base64", "serde_json", "switchboard-utils", "solana-v3", "dep:solana-account-decoder-v3", "dep:solana-client-v3", "dep:solana-sdk-v3", "dep:solana-sdk-v2"]

## Configures the crate for Solana devnet deployment.
devnet = []

## Enables documentation configuration metadata. Used by docs.rs.
doc_cfg = []

## Enables Anchor framework support with Solana SDK v2.
## Use when integrating with Anchor programs.
anchor = ["anchor-lang", "solana-v2"]

## Enables Pinocchio optimization for faster on-chain execution.
## Reduces compute units by using optimized account deserialization.
pinocchio = ["dep:pinocchio"]

## **INTERNAL/TESTING ONLY** - Disables signature verification.
## Never use in production.
test_only_ignore_singers = []

## Uses Solana SDK version 2.x (>= 2).
solana-v2 = ["dep:solana-program-v2"]

## Uses Solana SDK version 3.x (>= 3).
solana-v3 = ["dep:solana-program-v3"]

idl-build = ["anchor-lang/idl-build"]

[build-dependencies]
cc = "1.0"

[dependencies]
anchor-lang = { version = ">=0.31.0", optional = true }
anyhow = "1.0.97"
arrayref = "0.3.9"
base64 = { version = "0.22", optional = true }
base64ct = "<1.8"
bincode = { version = "^1" }
borsh = { version = "1.5.7" }
bs58 = { version = "0.4", features = ["alloc"], optional = true }
bytemuck = { version = "^1", features = ["derive"] }
chrono = { version = "0.4", optional = true }
dashmap = { version = "6.0.1", optional = true }
futures-util = { version = "0.3", optional = true }
faster-hex = "0.10.0"
futures = { version = "0.3.31", optional = true }
hex = { version = "0.4", optional = true }
libsecp256k1 = "0.7.1"
pinocchio = { version = "0.9.2", features = ["std"], optional = true }
prost = { version = "0.13.1", optional = true }
reqwest = { version = "0.11", features = ["json", "rustls-tls"], default-features = false, optional = true }
rust_decimal = "^1"
serde = { version = "^1", features = ["derive"] }
serde_json = { version = "1.0", optional = true }
sha2 = "0.10.8"
solana-account-decoder-v2 = { package = "solana-account-decoder", version = ">=2,<3", optional = true }
solana-account-decoder-v3 = { package = "solana-account-decoder", version = ">=3", optional = true }
solana-client-v2 = { package = "solana-client", version = ">=2,<3", optional = true }
solana-client-v3 = { package = "solana-client", version = ">=3", optional = true }
solana-program-v2 = { package = "solana-program", version = ">=2,<3", optional = true }
solana-program-v3 = { package = "solana-program", version = ">=3", optional = true }
solana-sdk-v2 = { package = "solana-sdk", version = ">=2,<3", optional = true }
solana-sdk-v3 = { package = "solana-sdk", version = ">=3", optional = true }
spl-associated-token-account = { version = "6.0", optional = true }
switchboard-protos = ">=0.2.3"
switchboard-utils = { version = "0.9", optional = true }
tokio = { version = "^1.41", features = ["full", "tracing"], optional = true }
tokio-stream = { version = ">=0.1.17", optional = true }
tokio-tungstenite = { version = "0.24", features = ["native-tls"], optional = true }
url = { version = "2.5", optional = true }
